@@ -3,6 +3,8 @@ package be.kuleuven.assemassit.Domain.Repositories;
 import be.kuleuven.assemassit.Domain.CarModel;
 import be.kuleuven.assemassit.Domain.Enums.*;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class CarModelRepository {
@@ -10,38 +12,39 @@ public class CarModelRepository {
 
   public List<CarModel> getCarModels() {
     if (carModels == null) {
+      carModels = new ArrayList<>();
       CarModel carModelA = new CarModel(
         0,
         "Model A",
-        List.of(Wheel.WINTER, Wheel.COMFORT, Wheel.SPORT),
-        List.of(Gearbox.SIX_SPEED_MANUAL, Gearbox.FIVE_SPEED_MANUAL, Gearbox.FIVE_SPEED_AUTOMATIC),
-        List.of(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK, Seat.VINYL_GREY),
-        List.of(Body.SEDAN, Body.BREAK),
-        List.of(Color.RED, Color.BLUE, Color.BLACK, Color.WHITE),
-        List.of(Engine.STANDARD, Engine.PERFORMANCE),
-        List.of(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
-        List.of(Spoiler.NO_SPOILER));
+        Arrays.asList(Wheel.WINTER, Wheel.COMFORT, Wheel.SPORT),
+        Arrays.asList(Gearbox.SIX_SPEED_MANUAL, Gearbox.FIVE_SPEED_MANUAL, Gearbox.FIVE_SPEED_AUTOMATIC),
+        Arrays.asList(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK, Seat.VINYL_GREY),
+        Arrays.asList(Body.SEDAN, Body.BREAK),
+        Arrays.asList(Color.RED, Color.BLUE, Color.BLACK, Color.WHITE),
+        Arrays.asList(Engine.STANDARD, Engine.PERFORMANCE),
+        Arrays.asList(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
+        Arrays.asList(Spoiler.NO_SPOILER));
       CarModel carModelB = new CarModel(
         1,
         "Model B",
-        List.of(Wheel.WINTER, Wheel.COMFORT, Wheel.SPORT),
-        List.of(Gearbox.SIX_SPEED_MANUAL, Gearbox.FIVE_SPEED_AUTOMATIC),
-        List.of(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK, Seat.VINYL_GREY),
-        List.of(Body.SEDAN, Body.BREAK, Body.SPORT),
-        List.of(Color.RED, Color.BLUE, Color.GREEN, Color.YELLOW),
-        List.of(Engine.STANDARD, Engine.PERFORMANCE, Engine.ULTRA),
-        List.of(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
-        List.of(Spoiler.LOW, Spoiler.NO_SPOILER));
+        Arrays.asList(Wheel.WINTER, Wheel.COMFORT, Wheel.SPORT),
+        Arrays.asList(Gearbox.SIX_SPEED_MANUAL, Gearbox.FIVE_SPEED_AUTOMATIC),
+        Arrays.asList(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK, Seat.VINYL_GREY),
+        Arrays.asList(Body.SEDAN, Body.BREAK, Body.SPORT),
+        Arrays.asList(Color.RED, Color.BLUE, Color.GREEN, Color.YELLOW),
+        Arrays.asList(Engine.STANDARD, Engine.PERFORMANCE, Engine.ULTRA),
+        Arrays.asList(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
+        Arrays.asList(Spoiler.LOW, Spoiler.NO_SPOILER));
       CarModel carModelC = new CarModel(2,
         "Model C",
-        List.of(Wheel.WINTER, Wheel.SPORT),
-        List.of(Gearbox.SIX_SPEED_MANUAL),
-        List.of(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK),
-        List.of(Body.SPORT),
-        List.of(Color.BLACK, Color.WHITE),
-        List.of(Engine.PERFORMANCE, Engine.ULTRA),
-        List.of(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
-        List.of(Spoiler.LOW, Spoiler.HIGH));
+        Arrays.asList(Wheel.WINTER, Wheel.SPORT),
+        Arrays.asList(Gearbox.SIX_SPEED_MANUAL),
+        Arrays.asList(Seat.LEATHER_WHITE, Seat.LEATHER_BLACK),
+        Arrays.asList(Body.SPORT),
+        Arrays.asList(Color.BLACK, Color.WHITE),
+        Arrays.asList(Engine.PERFORMANCE, Engine.ULTRA),
+        Arrays.asList(Airco.MANUAL, Airco.AUTOMATIC, Airco.NO_AIRCO),
+        Arrays.asList(Spoiler.LOW, Spoiler.HIGH));
       carModels.add(carModelA);
       carModels.add(carModelB);
       carModels.add(carModelC);
